--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Manchete
-description: Este é apenas um teste.
+title: Leonardo Thomaz
+description: Desenvolvedor
